added reset password, send email, forgot password, change password features. add Email Template entity to identityContext. Added bunch of things to ui, and improved validation

--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -10,4 +10,7 @@
     <ProjectReference Include="..\Presentation\Presentation.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4" />
+	</ItemGroup>
 </Project>
