--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -12,5 +12,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
 	</ItemGroup>
+
 </Project>
