--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -17,5 +17,9 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\ApplicationCore\ApplicationCore.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Identity\Migrations\" />
+	</ItemGroup>
 	
 </Project>
