added screen for all genres, create Genre and edit genre function left to implement

--- a/src/Presentation/Presentation.csproj
+++ b/src/Presentation/Presentation.csproj
@@ -15,6 +15,13 @@
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Genres\" />
+    <Folder Include="wwwroot\css\Books\Genres\" />
+    <Folder Include="wwwroot\css\Shared\" />
+    <Folder Include="wwwroot\js\Books\Genres\" />
+  </ItemGroup>
+
 
 
 
