added generic service for entities that just need CRUD operations, renew, and checking that name is unique. Implemented language feature fully

--- a/src/Presentation/Presentation.csproj
+++ b/src/Presentation/Presentation.csproj
@@ -19,6 +19,7 @@
     <Folder Include="wwwroot\css\Books\Genres\" />
     <Folder Include="wwwroot\css\Shared\" />
     <Folder Include="wwwroot\js\Books\Genres\" />
+    <Folder Include="wwwroot\js\Books\Languages\" />
   </ItemGroup>
 
 
