--- a/src/Presentation/Presentation.csproj
+++ b/src/Presentation/Presentation.csproj
@@ -17,9 +17,11 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\css\Books\Genres\" />
+    <Folder Include="wwwroot\css\Books\Authors\" />
     <Folder Include="wwwroot\css\Shared\" />
     <Folder Include="wwwroot\js\Books\Genres\" />
     <Folder Include="wwwroot\js\Books\Languages\" />
+    <Folder Include="wwwroot\js\Books\Authors\" />
   </ItemGroup>
 
 
