--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
+	<RootNamespace>Nika1337.Library.Web</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,9 +11,9 @@
     <ProjectReference Include="..\Presentation\Presentation.csproj" />
   </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-	</ItemGroup>
+    <ItemGroup>
+	    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4" />
+	    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    </ItemGroup>
 
 </Project>
