--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Ardalis.Specification" Version="8.0.0" />
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.4.3" />
 	</ItemGroup>
 	
 </Project>
