renamed specifications and modified their design a bit, added specifications for rooms

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+
+	
+  <ItemGroup>
+    <Folder Include="DataTransferObjects\Library\Rooms\" />
+  </ItemGroup>
+
 </Project>
