--- a/src/Presentation/Presentation.csproj
+++ b/src/Presentation/Presentation.csproj
@@ -6,10 +6,11 @@
 	<RootNamespace>Nika1337.Library.Presentation</RootNamespace>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
   </PropertyGroup>
-
+	
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
 	<PackageReference Include="AutoMapper" Version="13.0.1" />
+	<PackageReference Include="ReportViewerCore.NETCore" Version="15.1.22" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,21 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\css\Library\BookEditions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Reports\Datasets\PopularityReportDataSet.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>PopularityReportDataSet.xsd</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Reports\Datasets\PopularityReportDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>PopularityReportDataSet.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
  
