--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -12,7 +12,8 @@
   </ItemGroup>
 
     <ItemGroup>
-	    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4" />
+	    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.8.0-3.final" />
+	    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8" />
 	    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     </ItemGroup>
 
